apps/base/harmony-ui-mock/uimock-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: harmony-ui-mock-service
  labels:
    app: harmony-ui-mock
spec:
  selector:
    app: harmony-ui-mock
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
